--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	</head>
 	<body>
 		<div id="quizContainer" class="container">
-      <div class="title">Metal Gear Solid Quiz</div>
+      <div class="title">Metal Gear Solid</div>
+      <div class="tagline">Tactical Espionage Action</div>
       <button id="startBtn">Start Quiz!</button>
         <div id="timer">You have 100 Seconds to Complete</div>
 				<div id="question" class="question"></div>
@@ -15,7 +16,7 @@
 					<button class ="option"><input type="radio" name="option" value="2" /><span id="opt2"></span></button>
 					<button class ="option"><input type="radio" name="option" value="3" /><span id="opt3"></span></button>
 					<button class ="option"><input type="radio" name="option" value="4" /><span id="opt4"></span></button>
-					<button id="nextButton" class="next-btn" onclick="loadNextQuestion();">Submit Answer</button>
+					<button id="nextBtn" class="next-btn" onclick="loadNextQuestion();">Submit Answer</button>
 				</div>
 				<div id="result" class="container result" style="display:none;">
         </div>
