--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>Quiz | Metal Gear Solid</title>
-		
 		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
+		<div class ="highScores" id ="returnToGame">High Scores</div>
 		<div id="quizContainer" class="container">
       <div class="title">Metal Gear Solid</div>
       <div class="tagline">Tactical Espionage Action</div>
