added retry functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			<div class="title">Metal Gear Solid</div>
 			<div class="tagline">Tactical Espionage Action</div>
 			<button id="startBtn">Start Quiz!</button>
+			<button id="retryBtn" onclick="retry();" style="display:none;">Retry?</button>
 				<div id="timer">You have 60 Seconds to Complete</div>
 				<div id="question" class="question"></div>
 					<button class ="option"><input type="radio" name="option" value="1" /><span id="opt1"></span></button>
