cleaned up code comments

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link href="./assets/css/style.css" rel="stylesheet">
 	</head>
 	<body>
-		<div class ="highScores" id ="returnToGame">High Scores</div>
+		<a class ="highScores" id ="returnToGame">High Scores</a>
 		<div id="quizContainer" class="container">
 			<div class="title">Metal Gear Solid</div>
 			<div class="tagline">Tactical Espionage Action</div>
@@ -20,8 +20,7 @@
 					<button id="nextBtn" class="next-btn" onclick="loadNextQuestion();">Submit Answer</button>
 					<div id="confirmAns"></div>	
 		</div>
-		<div id="result" class="container result" style="display:none;">
-		</div>
+		<div id="result" class="container result" style="display:none;"></div>
         <script src="./assets/js/questions.js"></script>
         <script src="./assets/js/quizscript.js"></script>
 	</body>
